lab1/Test/L1-A-1-50.cmm
float SWW1M7QDqq 
;
int ;
struct N1vMcgZt7r1BE43PpyL {
  float dLKPbI6L ;
}v ( int XXpr [ 1377091862 < ] ) {
  return - ! - ! HNwPP0D8 = ( WdINpQDfhotOX ( ) * 
    xoXf_xs3eH0uF >= e2EV <= vzEM < BOMSMNpgSp9r7r2 ) 
    == - wpU9mF + oK + iX_N1adHF + f + yZPlH2 < dd4bhkBQHgEBDUyfF 
    ;
}
int cwS06xs9PV ( ) {
  if ( 14628480 = nI )   if ( gqNSCcrFgPVvlmbt )   if 
    ( xczZDFAddTvJ )   if ( / WhB )   ssGy9TJCoCKcezqoH 
    ;




}
